force-app/main/default/objects/Lead/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <formula>IMAGE(
  CASE(Lead_Quality_Helper__c,
    0, &quot;/img/samples/stars_000.gif&quot;, 
    1, &quot;/img/samples/stars_100.gif&quot;, 
    2, &quot;/img/samples/stars_200.gif&quot;, 
    3, &quot;/img/samples/stars_300.gif&quot;, 
    4, &quot;/img/samples/stars_400.gif&quot;, 
    5, &quot;/img/samples/stars_500.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;),
 CASE(Lead_Quality_Helper__c,
    0, &quot;0 stars&quot;, 
    1, &quot;1 star&quot;, 
    2, &quot;2 stars&quot;, 
    3, &quot;3 stars&quot;, 
    4, &quot;4 stars&quot;, 
    5, &quot;5 stars&quot;,
&quot;0 stars&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>