force-app/main/default/objects/Lead/fields/Lead_Quality_Helper__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality_Helper__c</fullName>
    <description>Evaluate these 5 fields: Email, Phone, Company, Title, and Industry</description>
    <formula>IF(ISBLANK(Email), 0, 1) + 
 IF(ISBLANK(Phone), 0, 1) +  
 IF(ISBLANK(Company), 0, 1) +
 IF(ISBLANK(Title), 0, 1) + 
 IF(ISPICKVAL(Industry, &quot;&quot;), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality Helper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>